# MuseScore

./: CMakeLists.txt  SetupConfigure.cmake
src/app/: CMakeLists.txt  app_config.h.in  appfactory.cpp  main.cpp
src/appshell/view/: appmenumodel.cpp  appmenumodel.h
src/engraving/api/v1/: elements.h
src/engraving/dom/: edit.cpp  part.cpp  property.cpp  property.h  rest.cpp  rest.h  staff.cpp  staff.h  timesig.cpp  timesig.h  undo.cpp  undo.h
src/engraving/playback/renderers/: arpeggiorenderer.cpp
src/engraving/rw/: xmlwriter.cpp
src/engraving/style/: style.cpp  styledef.cpp  styledef.h
src/engraving/tests/: copypaste_tests.cpp  rest_tests.cpp  scoreutils_tests.cpp  staffmove_tests.cpp
src/engraving/types/: constants.h  propertyvalue.cpp  propertyvalue.h  types.h  typesconv.cpp  typesconv.h
src/framework/global/: CMakeLists.txt
src/importexport/: CMakeLists.txt
src/importexport/finale/: CMakeLists.txt  ifinaleconfiguration.h
src/importexport/mnx/: CMakeLists.txt  mnxmodule.cpp  mnxmodule.h
src/importexport/mnx/internal/: mnxexporter.cpp  mnxexporter.h  mnximporter.cpp  mnximporter.h  mnxtypesconv.cpp  mnxtypesconv.h  notationmnxreader.cpp  notationmnxreader.h  notationmnxwriter.cpp  notationmnxwriter.h
src/importexport/mnx/internal/export/: mnxexporter.cpp  mnxexporter.h  mnxexportglobal.cpp  mnxexportlayouts.cpp  mnxexportparts.cpp  mnxexportsequences.cpp
src/importexport/mnx/internal/import/: mnximporter.cpp  mnximporter.h  mnximportmarkings.cpp  mnximportpartmeasures.cpp
src/importexport/mnx/internal/shared/: mnxformattedtext.cpp  mnxformattedtext.h  mnxtypesconv.cpp  mnxtypesconv.h
src/importexport/mnx/tests/: mnx_tests.cpp
src/importexport/mnx/tests/data/: README.md  barlineTypesOriginal_ref.mscx  layoutBrackets_ref.mscx
src/importexport/mnx/tests/data/mscx_reference_examples/: dynamics_ref.mscx  grand-staff_ref.mscx
src/importexport/mnx/tests/data/project_examples/: arpeggios_ref.mscx  graceArps_ref.mscx  nonArpeggios_ref.mscx
src/notation/: inotationinteraction.h  notationmodule.cpp  notationscene.qrc  notationtypes.h
src/notation/internal/: masternotation.cpp  notationactioncontroller.cpp  notationinteraction.cpp  notationinteraction.h  notationparts.cpp  notationuiactions.cpp
src/playback/internal/: playbackuiactions.cpp
src/project/internal/: projectactionscontroller.cpp
vtest/scores/: finale.musx
(+50 files in other folders)
